# rust-in-peace

./: .gitignore  Cargo.toml  README.md
assets/models/: ground.glb  skeleton.glb  skull.glb
assets/shaders/: pixelate.wgsl
src/: animation.rs  camera.rs  card.rs  crosshair.rs  debug.rs  effect.rs  enemy.rs  input.rs  main.rs  pixelate.rs  player.rs  scene.rs  tracer.rs  ui.rs
