[package]
name = "rust-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["jpeg"]}
petgraph = "0.8"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Build for Browser (WebAssembly)
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"


